<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_activity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="@dimen/activity_vertical_margin"
  tools:context=".MainActivity">

  <Button
    android:id="@+id/popularMoviesButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/popular_movies" />

  <Button
    android:id="@+id/stockHawkButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_large"
    android:text="@string/stock_hawk" />

  <Button
    android:id="@+id/buildItBiggerButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_large"
    android:text="@string/build_it_bigger" />

  <Button
    android:id="@+id/makeYourAppMaterialButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_large"
    android:text="@string/make_your_app_material" />

  <Button
    android:id="@+id/goUbiquitousButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_large"
    android:text="@string/go_ubiquitous" />

  <Button
    android:id="@+id/capstoneButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_large"
    android:text="@string/capstone_my_own_app" />

</LinearLayout>
